nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    team: infra
    version: 1.0.5
    env: staging
  annotations:
    description: "This is a pod for nginx"
    owner: "John Doe"

spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
        requests:
          memory: "64Mi"
          cpu: "250m"
      livenessProbe: # more choises: readinessProbe, startupProbe
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 0 # default is 0
        periodSeconds: 10 # default is 10
        timeoutSeconds: 1 # default is 1
        successThreshold: 1 # default is 1
        failureThreshold: 3 # default is 3
