service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
    - port: 8080
      targetPort: 80 #! this is the port of the container / pod

---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: khannedy/nginx-curl
      resources:
        limits:
          memory: "64Mi"
          cpu: "250m"
